--- a/README
+++ b/README
@@ -178,6 +178,26 @@ Each of these are cited below in terms of the infrastructre design and pipeline 
 ## iRedMail:
 
 
+## Zuplip collaboration:
+
+
+## Traefik:
+
+
+## Pi-Hole:
+
+## NextCloud:
+
+## checkmd:
+
+## Borg and borgmatic:
+
+## Gitlab and the Gitlab runner
+
+
+## Python backup-checker:
+
+
 
 
 
