--- a/README
+++ b/README
@@ -281,7 +281,7 @@ Ran additional tests with inter-domain emails to gmail account (to and from) the
 
 
 
-## Zuplip collaboration:
+## Zulip collaboration:
 
 
 
